--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -22,6 +23,8 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
     "express": "^4.18.2",
+    "less": "^4.2.0",
+    "ng-zorro-antd": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
